--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 </div>
 
 
-<div class="pager">
+<div class="my_pager">
 	<ul>
 		<% for(var i=1;i<=pages;i++) { %>
 			<li><a href="<%='/?page='+i %>"><%=i%></a></li>
