--- a/views/article/item.html
+++ b/views/article/item.html
@@ -1,6 +1,6 @@
 <div class="article-item">
-	<div class="article-title"><a href=""><%= article.title %></a></div>
-	<div class="article-date"><%= article.create_at %></div>
-	<div class="article-content"><%= article.content %></div>
+	<div class="article-title"><a href="<%= '/article/'+article._id %>"><%= article.title %></a></div>
+	<div class="article-date"><%= article.create_at.toLocaleString() %></div>
+	<div class="article-content"><%- article.mPreview %></div>
 	<div class="article-other"><a href=""><%= article.tag %></a></div>
 </div>
