--- a/views/layout.html
+++ b/views/layout.html
@@ -3,15 +3,19 @@
   <head>
     <title>Home of DaXi</title>
     <meta charset="utf-8"/>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/libs/bootstrap/css/bootstrap.css' /> 
+    <link rel='stylesheet' href='/stylesheets/style.css' />  
+    <link rel='stylesheet' href='/libs/editor/editor.css' />
+    <link rel='stylesheet' href='/libs/webuploader/webuploader.css' />
+    <script type="text/javascript" src='/libs/jquery-2.1.0.js'></script>
   </head>
   <body>
     <div class="header">
     </div>
-    <div class="nav">
+    <div class="my_nav">
     	<ul>
-    		<li><a href="">首页</a></li>
-    		<li><a href="">关于我</a></li>
+    		<li><a href="\">首页</a></li>
+    		<li><a href="\about">关于</a></li>
     		<li><a href="">妹子图</a></li>
     	</ul>
     </div>
@@ -19,7 +23,7 @@
         <%- body %>
     </div>
     <div class="footer">
-    	拉阿拉啦啦啦
+    	真相很少纯粹，也决不简单。
     </div>
   </body>
 </html>
