点击标签索引相关

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0 auto;
   width: 800px;
-  background-color: #E0E0E0;
+  background-color: #F0F0F0;
   /*background-image: url(../images/bg1.jpg);*/
 	background-size:100%;
   font: 14px "微软雅黑", Helvetica, Arial, sans-serif;
@@ -59,7 +59,7 @@ a {
 
 .article-title {
 	text-align: center;
-	font-size: 24px;
+	font-size: 28px;
 }
 
 .article-title a{
