--- a/views/layout.html
+++ b/views/layout.html
@@ -3,6 +3,7 @@
   <head>
     <title>Home of DaXi</title>
     <meta charset="utf-8"/>
+    <link rel="icon" href="/images/dsb_icon_32.png" type="image/x-icon"/>
     <link rel='stylesheet' href='/libs/bootstrap/css/bootstrap.css' /> 
     <link rel='stylesheet' href='/stylesheets/style.css' />  
     <link rel='stylesheet' href='/libs/editor/editor.css' />
