--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
 <div class="my_pager">
 	<ul>
 		<% for(var i=1;i<=pages;i++) { %>
-			<li><a href="<%='/?page='+i %>"><%=i%></a></li>
+			<li><a href="<%='/?page='+i+'&tag='+tag %>"><%=i%></a></li>
 		<% } %>
 	</ul>
 </div>
